[package]
name = "stress-ws"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.15.0"
url = "2.2.2"
tokio = { version = "1.9.0", default-features = false, features = ["io-std", "macros", "rt-multi-thread", "net", "time"] }
futures-util = { version = "0.3.16", default-features = false, features = ["async-await", "sink", "std"] }
futures-channel = "0.3.16"
tracing-subscriber = "0.2.19"
tracing = "0.1.26"
