[package]
name = "rango-load-tester"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
futures-channel = "0.3.16"
futures-util = { version = "0.3.16", default-features = false, features = ["async-await", "sink", "std"] }
lapin="1.7.1"
serde = "1.0.127"
serde_json = "1.0.66"
tokio = { version = "1.9.0", default-features = false, features = ["io-std", "macros", "rt-multi-thread", "net", "time"] }
tokio-amqp="1.0.0"
tokio-tungstenite = "0.15.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4"] }
